--- a/src/index.css
+++ b/src/index.css
@@ -54,9 +54,6 @@ p {
   font-family: Montserrat;
   font-size: 1.875rem;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: normal;
   color: var(--azure);
 }
@@ -72,18 +69,76 @@ p {
   opacity: 0.5;
 }
 
+.normal {
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+}
+
 .font {
   font-family: Montserrat;
   font-size: 0.813rem;
   font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: 1.9px;
   color: var(--black-two);
   height: 1rem;
 }
 
-.left-nav {
+.flex {
   display: flex;
+}
+
+.book-panel {
+  width: 75rem;
+  height: 10.625rem;
+  margin: 0 auto;
+  padding: 32px 0 26px 27px;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: var(--white);
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title {
+  width: 12.313rem;
+  height: 1.813rem;
+  margin: 0.188rem 20.188rem 0 0;
+  font-size: 1.375rem;
+  font-weight: bold;
+  letter-spacing: -0.2px;
+  color: var(--black-two);
+}
+
+.author {
+  width: 6.688rem;
+  height: 1.188rem;
+  margin: 0.25rem 0 0;
+}
+
+.comment {
+  width: 4.563rem;
+  margin: 0.188rem 0.938rem 0.125rem 0;
+}
+
+.remove {
+  width: 3.375rem;
+  margin: 0.188rem 0.938rem 0.125rem 0;
+}
+
+.edit {
+  width: 1.688rem;
+  margin: 0.188rem 18.625rem 0.125rem 1.063rem;
+}
+
+.font-family {
+  font-family: RobotoSlab;
+}
+
+.default {
+  font-size: 0.875rem;
+  font-weight: 300;
+  letter-spacing: normal;
+  color: #4386bf;
+  height: 1.188rem;
 }
