--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ p {
 
 .panel-bg {
   height: 95px;
-  margin: 0 0 38px;
+  margin: -1% 0 38px;
   padding: 23px 80px;
   background-color: var(--white);
 }
@@ -51,7 +51,6 @@ p {
   width: 15rem;
   height: 2.313rem;
   margin: 0.375rem 2.938rem 0.125rem 0;
-  font-family: Montserrat;
   font-size: 1.875rem;
   font-weight: bold;
   letter-spacing: normal;
@@ -77,7 +76,6 @@ p {
 }
 
 .font {
-  font-family: Montserrat;
   font-size: 0.813rem;
   font-weight: normal;
   letter-spacing: 1.9px;
@@ -101,11 +99,23 @@ p {
 }
 
 .category {
-  width: 3.063rem;
   opacity: 0.5;
-  font-family: Montserrat;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 400;
+  color: #495057;
+}
+
+.select-field {
+  width: 77rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  margin: -2% auto auto auto;
+  display: block;
 }
 
 .title {
@@ -153,14 +163,12 @@ p {
 .percentage {
   width: 4.25rem;
   height: 39px;
-  font-family: Montserrat;
   font-size: 32px;
   font-weight: normal;
 }
 
 .complete {
   opacity: 0.5;
-  font-family: Montserrat;
   font-size: 14px;
   font-weight: normal;
 }
@@ -177,4 +185,35 @@ p {
 
 .down-section {
   margin-left: 10px;
+}
+
+.line-2 {
+  height: 4.375rem;
+  margin: 18px 150px 0 79px;
+  border-left: solid 2px #e8e8e8;
+  padding-left: 20px;
+}
+
+.current-chapter {
+  height: 1.125rem;
+  margin: 0.063rem 3.625rem 0 3.688rem;
+  opacity: 0.5;
+}
+
+.current-lesson {
+  height: 1.313rem;
+  margin: 0.438rem 6.813rem 0.25rem 3.688rem;
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: -0.4px;
+}
+
+.update-progress {
+  width: 11.5rem;
+  height: 2.063rem;
+  margin: 0.75rem 0 0.563rem 3.688rem;
+  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+  border-radius: 3px;
+  background-color: var(--azure);
+  color: #fff;
 }
